[gd_scene load_steps=6 format=2]

[ext_resource path="res://DropDownAnswer.tscn" type="PackedScene" id=1]
[ext_resource path="res://App.gd" type="Script" id=2]
[ext_resource path="res://MultipleChoiceAnswer.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[node name="Application" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
QuestionPanel = NodePath("Panel/VBoxContainer/QuestionPanel")
Scoreboard = NodePath("Panel/VBoxContainer/Scoreboard")
MultipleChoiceAnswerRes = ExtResource( 3 )
DropDownAnswerRes = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scoreboard" type="PanelContainer" parent="Panel/VBoxContainer"]
margin_right = 984.0
margin_bottom = 50.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/Scoreboard"]
margin_left = 1.0
margin_top = 1.0
margin_right = 983.0
margin_bottom = 49.0
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="NumberCorrect" type="HBoxContainer" parent="Panel/VBoxContainer/Scoreboard/MarginContainer"]
margin_left = 10.0
margin_right = 108.0
margin_bottom = 48.0
size_flags_horizontal = 0

[node name="Desc" type="Label" parent="Panel/VBoxContainer/Scoreboard/MarginContainer/NumberCorrect"]
margin_right = 63.0
margin_bottom = 48.0
text = "
# Correct:
"
align = 1
valign = 1

[node name="Correct" type="Label" parent="Panel/VBoxContainer/Scoreboard/MarginContainer/NumberCorrect"]
margin_left = 67.0
margin_right = 76.0
margin_bottom = 48.0
size_flags_vertical = 5
text = "#"
valign = 1

[node name="Slash" type="Label" parent="Panel/VBoxContainer/Scoreboard/MarginContainer/NumberCorrect"]
margin_left = 80.0
margin_right = 85.0
margin_bottom = 48.0
size_flags_vertical = 5
text = "/"
valign = 1

[node name="Total" type="Label" parent="Panel/VBoxContainer/Scoreboard/MarginContainer/NumberCorrect"]
margin_left = 89.0
margin_right = 98.0
margin_bottom = 48.0
size_flags_vertical = 5
text = "#"
valign = 1

[node name="Score" type="HBoxContainer" parent="Panel/VBoxContainer/Scoreboard/MarginContainer"]
margin_left = 465.0
margin_right = 517.0
margin_bottom = 48.0
size_flags_horizontal = 4
alignment = 1

[node name="Text" type="Label" parent="Panel/VBoxContainer/Scoreboard/MarginContainer/Score"]
margin_top = 17.0
margin_right = 39.0
margin_bottom = 31.0
text = "Score:"
valign = 1

[node name="Number" type="Label" parent="Panel/VBoxContainer/Scoreboard/MarginContainer/Score"]
margin_left = 43.0
margin_top = 17.0
margin_right = 52.0
margin_bottom = 31.0
text = "#"
valign = 1

[node name="PercentCorrect" type="HBoxContainer" parent="Panel/VBoxContainer/Scoreboard/MarginContainer"]
margin_left = 893.0
margin_right = 972.0
margin_bottom = 48.0
size_flags_horizontal = 8
alignment = 1

[node name="Text" type="Label" parent="Panel/VBoxContainer/Scoreboard/MarginContainer/PercentCorrect"]
margin_top = 17.0
margin_right = 66.0
margin_bottom = 31.0
text = "% Correct:"
valign = 1

[node name="Number" type="Label" parent="Panel/VBoxContainer/Scoreboard/MarginContainer/PercentCorrect"]
margin_left = 70.0
margin_top = 17.0
margin_right = 79.0
margin_bottom = 31.0
text = "#"
valign = 1

[node name="QuestionPanel" type="PanelContainer" parent="Panel/VBoxContainer"]
margin_top = 54.0
margin_right = 984.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/QuestionPanel"]
margin_left = 1.0
margin_top = 1.0
margin_right = 983.0
margin_bottom = 481.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Contents" type="VBoxContainer" parent="Panel/VBoxContainer/QuestionPanel/ScrollContainer"]
margin_right = 982.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Question" type="HBoxContainer" parent="Panel/VBoxContainer/QuestionPanel/ScrollContainer/Contents"]
margin_right = 982.0
margin_bottom = 466.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionNumber" type="CenterContainer" parent="Panel/VBoxContainer/QuestionPanel/ScrollContainer/Contents/Question"]
margin_right = 46.0
margin_bottom = 466.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NumberLabel" type="Label" parent="Panel/VBoxContainer/QuestionPanel/ScrollContainer/Contents/Question/QuestionNumber"]
margin_left = 15.0
margin_top = 226.0
margin_right = 31.0
margin_bottom = 240.0
text = "1.)"
valign = 1

[node name="QuestionText" type="ScrollContainer" parent="Panel/VBoxContainer/QuestionPanel/ScrollContainer/Contents/Question"]
margin_left = 50.0
margin_right = 982.0
margin_bottom = 466.0
size_flags_horizontal = 3
size_flags_vertical = 5
size_flags_stretch_ratio = 20.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="MarginContainer" parent="Panel/VBoxContainer/QuestionPanel/ScrollContainer/Contents/Question/QuestionText"]
margin_right = 932.0
margin_bottom = 466.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="QuestionLabel" type="Label" parent="Panel/VBoxContainer/QuestionPanel/ScrollContainer/Contents/Question/QuestionText/Container"]
margin_top = 226.0
margin_right = 932.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Placeholder?"
valign = 1
autowrap = true

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/QuestionPanel/ScrollContainer/Contents"]
margin_top = 470.0
margin_right = 982.0
margin_bottom = 480.0
custom_constants/margin_right = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Answers" type="VBoxContainer" parent="Panel/VBoxContainer/QuestionPanel/ScrollContainer/Contents/MarginContainer"]
margin_left = 10.0
margin_right = 972.0

[node name="SubmitButton" type="Button" parent="Panel/VBoxContainer"]
margin_left = 463.0
margin_top = 540.0
margin_right = 520.0
margin_bottom = 560.0
size_flags_horizontal = 4
text = "Submit"

[node name="NextButton" type="Button" parent="Panel/VBoxContainer"]
visible = false
margin_left = 471.0
margin_top = 540.0
margin_right = 513.0
margin_bottom = 560.0
size_flags_horizontal = 4
text = "Next"

[connection signal="pressed" from="Panel/VBoxContainer/SubmitButton" to="." method="submit_button_callback"]
[connection signal="pressed" from="Panel/VBoxContainer/NextButton" to="." method="next_button_callback"]
